Use only one websocket for backend event
